--- a/.gitignore
+++ b/.gitignore
@@ -533,3 +533,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+aps-aeccim-explorer/appsettings.Development.json
+aps-aeccim-explorer/appsettings.Development.json
