--- a/aps-aeccim-explorer/appsettings.Development.json
+++ b/aps-aeccim-explorer/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "FORGE_CLIENT_ID": "",
-  "FORGE_CLIENT_SECRET": "",
-  "FORGE_CALLBACK_URL": "http://localhost:8080/api/auth/callback"
+  "APS_CLIENT_ID": "",
+  "APS_CLIENT_SECRET": "",
+  "APS_CALLBACK_URL": "http://localhost:8080/api/auth/callback"
 }
