--- a/.gitignore
+++ b/.gitignore
@@ -536,3 +536,4 @@ FodyWeavers.xsd
 aps-aeccim-explorer/appsettings.Development.json
 aps-aeccim-explorer/appsettings.Development.json
 appsettings.Development.json
+appsettings.Development.json
